--- a/318/lectures/javascript-plugins/style.css
+++ b/318/lectures/javascript-plugins/style.css
@@ -1,7 +1,44 @@
+@import url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css');
+@import url('node_modules/select2/dist/css/select2.css');
+
 .container {
   margin: 50px auto;
 }
 
 #search-form {
+  margin-bottom: 50px;
+}
+
+#results li {
+  cursor: grab;
+}
+
+#results li:active {
+  cursor: grabbing;
+}
+
+#results li.ghost {
+  filter: grayscale(1);
+  opacity: 0.5;
+}
+
+#preview, #editor {
+  margin: 20px auto;
+  max-width: 600px;
+}
+
+#preview {
+  min-height: 100px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 6px 12px;
+  text-align: left;
+}
+
+#preview img {
+  max-width: 100%;
+}
+
+.select2 {
   margin-bottom: 50px;
 }
