--- a/360/lectures/javascript-plugins/style.css
+++ b/360/lectures/javascript-plugins/style.css
@@ -1,7 +1,36 @@
+@import url('node_modules/select2/dist/css/select2.min.css');
+
 .container {
   margin: 50px auto;
 }
 
 #search-form {
   margin-bottom: 50px;
+}
+
+#results li {
+  cursor: grab;
+}
+
+#results li:active {
+  cursor: grabbing;
+}
+
+#results li.ghost {
+  filter: grayscale(1);
+  opacity: 0.5;
+}
+
+#editor {
+  min-height: 200px;
+  width: 100%;
+  padding: 16px 32px;
+}
+
+#preview {
+  min-height: 200px;
+  border: 2px solid #dddddd;
+  border-radius: 5px;
+  text-align: left;
+  padding: 16px 32px;
 }
