Bootstrap lecture done

--- a/1650/bootstrap-and-layouts/lecture/layouts-demo/css/components/navbar.css
+++ b/1650/bootstrap-and-layouts/lecture/layouts-demo/css/components/navbar.css
@@ -3,7 +3,12 @@
   justify-content: center;
   align-items: center;
   height: 90px;
-  box-shadow: 5px 0 10px rgba(0,0,0,0.15);
+  box-shadow: 5px 0 10px rgba(0, 0, 0, 0.15);
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  background-color: white;
+  z-index: 10;
 }
 .navbar-lewagon img {
   width: 50px;
